--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -23,7 +23,7 @@ pipelines:
         projectUID: 3890
         projectName: saas_ingestion
         version: saas_ingestion/1.0
-        author: null
+        author: ''
         repositoryPath: gitUri=http://gitserver:3000/pM1sUhx1_team_2518/pM1sUhx1_project_3890.git&subPath=
         createdAt: '2022-11-03 15:38:41'
   pipelines/orders_cleanup:
@@ -44,10 +44,63 @@ pipelines:
         projectUID: 3890
         projectName: saas_ingestion
         version: saas_ingestion/1.0
-        author: null
+        author: ''
         repositoryPath: gitUri=http://gitserver:3000/pM1sUhx1_team_2518/pM1sUhx1_project_3890.git&subPath=
         createdAt: '2022-11-03 15:42:24'
+  pipelines/mrr_reporting:
+    name: mrr_reporting
+    description: ''
+    author: maciej+webinar-2022@prophecy.io
+    mode: batch
+    language: python
+    createdAt: '2022-11-03 15:48:16'
+    datasets:
+      inputs:
+      - datasets/silver_sales_customers
+      - datasets/silver_sales_orders
+      - datasets/customers_nations
+      - datasets/nations
+      - datasets/regions
+      outputs:
+      - datasets/final_report
+    dependencies: {}
 datasets:
+  datasets/customers_nations:
+    name: customers_nations
+    description: ''
+    author: maciej+webinar-2022@prophecy.io
+    createdAt: '2022-11-03 15:52:55'
+    physicalDatasets:
+      dev:
+        fabricId: 1034
+        datasetType: File
+        description: ''
+        author: maciej+webinar-2022@prophecy.io
+        createdAt: '2022-11-03 15:52:55'
+  datasets/regions:
+    name: regions
+    description: ''
+    author: maciej+webinar-2022@prophecy.io
+    createdAt: '2022-11-03 15:53:47'
+    physicalDatasets:
+      dev:
+        fabricId: 1034
+        datasetType: File
+        description: ''
+        author: maciej+webinar-2022@prophecy.io
+        createdAt: '2022-11-03 15:53:47'
+  datasets/nations:
+    name: nations
+    description: ''
+    author: maciej+webinar-2022@prophecy.io
+    createdAt: '2022-11-03 15:53:21'
+    physicalDatasets:
+      dev:
+        fabricId: 1034
+        datasetType: File
+        description: ''
+        author: maciej+webinar-2022@prophecy.io
+        createdAt: '2022-11-03 15:53:21'
   datasets/silver_sales_customers:
     name: silver_sales_customers
     description: ''
@@ -72,10 +125,53 @@ datasets:
         description: ''
         author: maciej+webinar-2022@prophecy.io
         createdAt: '2022-11-03 15:43:45'
+  datasets/final_report:
+    name: final_report
+    description: ''
+    author: maciej+webinar-2022@prophecy.io
+    createdAt: '2022-11-03 15:58:34'
+    physicalDatasets:
+      dev:
+        fabricId: 1034
+        datasetType: Database
+        description: ''
+        author: maciej+webinar-2022@prophecy.io
+        createdAt: '2022-11-03 15:58:34'
 templates: {}
-jobs: {}
+jobs:
+  jobs/daily_job:
+    name: daily_job
+    description: ''
+    fabricUID: 1034
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: small
+    scheduleCron: 0 0 0 * * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/customers_cleanup
+    - pipelines/orders_cleanup
+    jobClusterMode:
+      clusterMode:
+        Multi: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2022-11-03 16:11:32'
+    author: maciej+webinar-2022@prophecy.io
 libraries: []
-subgraphs: {}
+subgraphs:
+  subgraphs/enrich_customers:
+    name: enrich_customers
+    description: Enriches customers data
+    author: maciej+webinar-2022@prophecy.io
+    language: python
+    createdAt: '2022-11-03 15:51:39'
 sqlModels: {}
 sqlPipeline: null
 dependencies: '[]'
